--- a/examples/example-embed-multiple.html
+++ b/examples/example-embed-multiple.html
@@ -5,9 +5,9 @@
 <script>
     Habitat.install(window)
 </script>
-<script src="../source/map.js"></script>
+<script src="../source/pond.js"></script>
 <script>
 	
-	// Your demo code goes here
+	// ribbit
 	
 </script>
