--- a/examples/example-embed-single.html
+++ b/examples/example-embed-single.html
@@ -5,9 +5,9 @@
 <script>
     Habitat.install(window)
 </script>
-<script src="../build/build-embed.js"></script>
+<script src="../build/pondoffame-embed.js"></script>
 <script>
 	
-	// Your demo code goes here
+	// ribbit
 	
 </script>
