--- a/tinker/tinker.html
+++ b/tinker/tinker.html
@@ -6,5 +6,5 @@
 <script>
     Habitat.install(window)
 </script>
-<script src="../source/map.js"></script>
+<script src="../source/pond.js"></script>
 <body><script src="tinker.js"></script></body>
