--- a/source/habitat-header.html
+++ b/source/habitat-header.html
@@ -1,3 +1,9 @@
+<style>
+	@font-face {
+		font-family: Rosario;
+		src: url("../fonts/Rosario-Bold.ttf")
+	}
+</style>
 <script src="https://deno.land/x/habitat/build/habitat-embed.js"></script>
 <script src="https://deno.land/x/mothertode/build/mothertode-embed.js"></script>
 <script>
