simplify file structure

--- a/source/habitat-header.html
+++ b/source/habitat-header.html
@@ -1,7 +1,7 @@
 <style>
 	@font-face {
 		font-family: Rosario;
-		src: url("../fonts/Rosario-Bold.ttf")
+		src: url("fonts/Rosario-Bold.ttf")
 	}
 </style>
 <script src="https://deno.land/x/habitat/build/habitat-embed.js"></script>
