camera fix for vertical screen

--- a/source/habitat-header.html
+++ b/source/habitat-header.html
@@ -4,6 +4,7 @@
 		src: url("fonts/Rosario-Bold.ttf")
 	}
 </style>
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 <script src="https://deno.land/x/habitat/build/habitat-embed.js"></script>
 <script src="https://deno.land/x/mothertode/build/mothertode-embed.js"></script>
 <script>
