--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		src: url("fonts/Rosario-Bold.ttf")
 	}
 </style>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="user-scalable=no, initial-scale=1">
 <script src="https://deno.land/x/habitat/build/habitat-embed.js"></script>
 <script src="https://deno.land/x/mothertode/build/mothertode-embed.js"></script>
 <script>
