--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	}
 </style>
 <meta name="viewport" content="user-scalable=no, initial-scale=1">
-<script src="https://deno.land/x/habitat/build/habitat-embed.js"></script>
-<script src="https://deno.land/x/mothertode/build/mothertode-embed.js"></script>
+<script src="habitat-embed.js"></script>
+<script src="mothertode-embed.js"></script>
 <script>
     Habitat.install(window)
 </script>
