--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		src: url("fonts/Rosario-Bold.ttf")
 	}
 </style>
+<title>Pond of Fame</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1">
 <script src="habitat-embed.js"></script>
 <script src="mothertode-embed.js"></script>
