--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </style>
 <title>Pond of Fame</title>
 <meta name="viewport" content="user-scalable=no, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script src="habitat-embed.js"></script>
 <script src="mothertode-embed.js"></script>
 <script>
